// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem component should render with avatar 1`] = `
<View>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "peru",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <Memo()
      source="avatar_uri"
    />
  </PadView>
</View>
`;

exports[`ListItem component should render with input 1`] = `
<View>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <Themed.ListItemInput
      placeholder="Enter Text"
    />
  </PadView>
</View>
`;

exports[`ListItem component should render with left icon 1`] = `
<View>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <Icon
      color="red"
      name="wifi"
      size={20}
      type="font-awesome"
    />
  </PadView>
</View>
`;

exports[`ListItem component should render with title and subtitle 1`] = `
<View>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <Themed.ListItemContent>
      <Themed.ListItemTitle
        numberOfLines={5}
        style={
          Object {
            "backgroundColor": "peru",
          }
        }
      >
        title test
      </Themed.ListItemTitle>
      <Themed.ListItemSubtitle
        style={
          Object {
            "backgroundColor": "peru",
          }
        }
      >
        title test
      </Themed.ListItemSubtitle>
    </Themed.ListItemContent>
    <Themed.ListItemContent
      right={true}
    >
      <Themed.ListItemTitle
        right={true}
      >
        title
      </Themed.ListItemTitle>
    </Themed.ListItemContent>
  </PadView>
</View>
`;

exports[`ListItem component should render without issues 1`] = `
<View>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  />
</View>
`;
